# firm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_QUERY_PROPOSAL.md  CONTRIBUTING.md  DESIGN-audit-tamper-evidence.md  IMPROVEMENTS.md  NOTICE  PLAN.md  README.md  REVIEW.md  SECURITY.md  TODOS.md  alembic.audit.ini  alembic.cache.ini  alembic.channel.ini  alembic.queue.ini  llms-full.txt  llms.txt  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  comparison-to-rails.md  contrib.md  cookbook.md  database-backends.md  deployment.md  index.md  installation.md  testing-and-contributing.md  ui.md
docs/audit/: cli.md  configuration.md  getting-started.md  internals.md  overview.md  plan-independent-subject-actor-filtering.md  retention-and-querying.md  tamper-evidence.md
docs/cache/: cli.md  configuration.md  encryption-and-coders.md  eviction.md  getting-started.md  internals.md  operations.md  overview.md
docs/channel/: cli.md  configuration.md  getting-started.md  internals.md  overview.md
docs/queue/: cli.md  concurrency.md  configuration.md  getting-started.md  internals.md  jobs.md  overview.md  queues.md  recurring.md  retries-and-failures.md  workers-and-supervisor.md
examples/: README.md  audit_logging.py  combined_worker.py  embedded_worker.py  fastapi_app.py  flask_app.py  quickstart.py  secured_dashboard.py
scripts/: check_changelog.py  check_parity.py  gen_llms_full.py
tests/: parity_inventory.toml  test_docs.py
tests/audit/: conftest.py  test_append_only.py  test_attack_matrix.py  test_cli.py  test_concurrency.py  test_dialect_compile.py  test_e2e.py  test_history.py  test_integrity.py  test_integrity_append.py  test_migration.py  test_record.py  test_retention.py  test_sealing.py  test_transactions.py  test_two_key_split.py  test_verify.py
tests/cache/: conftest.py  test_cli.py  test_dialect_compile.py  test_estimate.py  test_expiry.py  test_max_age_reads.py  test_migration.py  test_parity_behavior.py  test_parity_unported_api.py  test_serialization_security.py  test_store.py
tests/channel/: conftest.py  test_channel.py  test_cli.py  test_dialect_compile.py  test_keys.py  test_migration.py  test_parity.py  test_schema.py  test_trim.py  test_watermark.py
tests/contrib/: conftest.py  test_fastapi.py  test_flask.py  test_sqlalchemy.py
tests/core/: test_database.py
tests/queue/: conftest.py  test_claim.py  test_cli_process_registration.py  test_concurrency.py  test_configure.py  test_dialect_compile.py  test_dispatcher.py  test_enqueue.py  test_error_surfacing.py  test_execute.py  test_fork.py  test_hooks.py  test_maintenance.py  test_migration.py  test_parity_claim_execution.py  test_parity_concurrency.py  test_parity_config_cli_scaling.py  test_parity_supervisor_recurring.py  test_poller.py  test_process.py  test_queues.py  test_retry.py  test_scheduler.py  test_schema.py  test_serialization.py  test_supervisor.py
tests/ui/: conftest.py  test_actions.py  test_audit_row_status.py  test_auth.py  test_integrity.py  test_parts.py  test_queries.py  test_server.py
