# Virtual workspace root for firm. This file is NOT a distributable package — it has no
# [project] table. It defines the uv workspace, the shared dev environment, and repo-wide
# tool config. Each publishable package lives under packages/*/ with its own pyproject.toml.

[tool.uv.workspace]
members = ["packages/*"]

# Resolve firm's internal dependencies to the local workspace source during development.
# Published wheels carry the plain PyPI version pins declared in each package's pyproject.
[tool.uv.sources]
firm-core = { workspace = true }
firm-queue = { workspace = true }
firm-cache = { workspace = true }
firm-channel = { workspace = true }
firm-audit = { workspace = true }
firm-ui = { workspace = true }
firm = { workspace = true }

[dependency-groups]
# Everything needed to run the full test suite + tooling against the whole workspace.
dev = [
    "pytest>=8.3",
    "ruff>=0.14",
    "ty",
    "zensical",
    "croniter>=2.0",
    "click>=8.1",
    "cryptography>=42",
    "msgpack>=1.0",
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "flask>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
# Source lives under packages/*/src/firm, so ruff can't auto-detect the first-party root.
known-first-party = ["firm"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "S101"]
"**/ui/render.py" = ["E501"]  # long lines are inline HTML/CSS strings
"scripts/gen_llms_full.py" = ["E501"]  # long lines are markdown prose/link strings for llms.txt

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
