# Virtual workspace root for firm. This file is NOT a distributable package — it has no
# [project] table. It defines the uv workspace, the shared dev environment, and repo-wide
# tool config. Each publishable package lives under packages/*/ with its own pyproject.toml.

[tool.uv.workspace]
members = ["packages/*"]

# Resolve firm's internal dependencies to the local workspace source during development.
# Published wheels carry the plain PyPI version pins declared in each package's pyproject.
[tool.uv.sources]
firm-core = { workspace = true }
firm-queue = { workspace = true }
firm-cache = { workspace = true }
firm-channel = { workspace = true }
firm-audit = { workspace = true }
firm-ui = { workspace = true }
firm = { workspace = true }
firm-stack = { workspace = true }

[dependency-groups]
# Everything needed to run the full test suite + tooling against the whole workspace.
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.14",
    # ty and zensical are pre-1.0 (0.0.x): their output changes between patch releases, so pin
    # exact to keep the pre-commit hook, CI, and every dev on the same version (no silent drift).
    "ty==0.0.56",
    "zensical==0.0.47",
    "croniter>=6.2.3",
    "click>=8.1",
    "cryptography>=42",
    "msgpack>=1.0",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.1",
    "flask>=3.0",
    "fastapi>=0.139.0",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "S"]
# Two flake8-bandit rules don't apply to this codebase and are pure noise, so silence them
# globally rather than per-line:
#   S101 (assert) — asserts here are invariant/type-narrowing guards, and the test suite is
#     assert-based; we never rely on them for input validation that -O would strip.
#   S311 (non-crypto RNG) — every `random` use is probabilistic sampling/jitter (ports of Solid's
#     expiry/trim run counts and the size-estimate reservoir), never cryptographic.
# Everything else in S stays on; genuinely-flagged sites (e.g. the opt-in pickle coder) carry a
# targeted `# noqa` at the source.
ignore = ["S101", "S311"]

[tool.ruff.lint.isort]
# Source lives under packages/*/src/firm, so ruff can't auto-detect the first-party root.
known-first-party = ["firm"]

[tool.ruff.lint.per-file-ignores]
# Tests bind test servers to all interfaces (S104), use fixture passwords (S106), and urlopen
# their own localhost server (S310) — all fine in a test harness.
"tests/*" = ["B011", "S104", "S106", "S310"]
# Inline HTML/CSS strings (E501); Markup() only ever wraps static SVG icons or URLs that
# percent-encode their own params (see _markup_fn), never unescaped user data (S704).
"**/ui/render.py" = ["E501", "S704"]
"scripts/gen_llms_full.py" = ["E501"]  # long lines are markdown prose/link strings for llms.txt

[tool.coverage.run]
source = ["firm"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
